# pizza_mensa_boys

./: Makefile  README.md  _run_out.txt  _run_output.txt  main.py  pyproject.toml
ai_challenge/data/: README.md  consumi_amtab.csv  fermate.csv  orari_fermate.csv  postazionibikesharing.csv
ai_challenge/graph/: README.md  __init__.py  build_graph.py  cluster_edges.py  kmeans.pkl  requirements.txt  router.py  scaler.pkl  visualize.py
cache/: bari_street_lamps.json  chicago_loop_street_lamps.json
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: app.py  chicago_crime_graph.py  predict_risk_bari.py  safewalk.ipynb  safewalk_pipeline.py  train_risk_model.py
notebooks/output/: bus_routes.json  lamps.json  lit_ways.json  route_map.html
notebooks/templates/: index.html
