[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai_challenge"
version = "0.0.1"
description = "Ai challenge"
authors = [
  { name = "Pizza_Mensa_Boys" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "mkdocs",
    "networkx>=3.4.2",
    "osmnx==1.9.1",
    "pip",
    "pytest",
    "python-dotenv",
    "requests>=2.32.5",
    "ruff",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.2",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ai_challenge"]
include = ["pyproject.toml", "ai_challenge/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ai_challenge"]
force-sort-within-sections = true

